# otus_course2

./: CMakeLists.txt  bulk_handler.cpp  bulk_handler.h  main.cpp
.github/workflows/: cmake.yml
